Add network and cache layer, create account

--- a/RoomDebts/ViewControllers/Authorization/SignUp/Storyboard/SignUp.storyboard
+++ b/RoomDebts/ViewControllers/Authorization/SignUp/Storyboard/SignUp.storyboard
@@ -81,6 +81,9 @@
                                                 <state key="normal" title="Next">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="onTextButtonTouchUpInside:" destination="t6m-m8-8Bm" eventType="touchUpInside" id="EvB-Gk-pkP"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
