Create new debt

--- a/RoomDebts/ViewControllers/CreateDebt/Storyboard/CreateDebt.storyboard
+++ b/RoomDebts/ViewControllers/CreateDebt/Storyboard/CreateDebt.storyboard
@@ -236,6 +236,9 @@
                                                 <state key="normal" title="Create">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="onCreateButtonTouchUpInside:" destination="nah-DX-p9k" eventType="touchUpInside" id="mmC-qv-Ukd"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
